# ava

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  meson.build  meson_options.txt
cmake/: BuildISO.cmake  CheckAndApplyFlags.cmake  ClangFormat.cmake  ClangTidy.cmake  DefaultCompiler.cmake  Documentation.cmake  Doxyfile.in  RunQEMU.cmake  clang-tidy.sh  format.sh  options.cmake
docs/: build-libcxx.md
docs/defaults/: header.html
meson/doxygen/: Doxyfile.in  meson.build
meson/format/: .clang-format
scripts/: limine.cfg
src/: CMakeLists.txt  meson.build
src/kernel/: CMakeLists.txt  kmain.c  kmain.cpp  log.c  log.cpp  main.c  meson.build
src/kernel/arch/x86_64/: arch.c  arch.cpp  meson.build
src/kernel/arch/x86_64/cpu/: gdt.S  gdt.cpp  idt.cpp  interrupts.S  interrupts.cpp  meson.build
src/kernel/arch/x86_64/cpu/gdt/: gdt.S  gdt.c
src/kernel/arch/x86_64/cpu/idt/: idt.S  idt.c  interrupt.c  interrupts.S
src/kernel/arch/x86_64/dev/: meson.build  serials.c  serials.cpp  streams.c
src/kernel/glue/: glue.cpp  meson.build
src/kernel/glue/cxxabi/: cxa_guard.cpp  cxxabi.cpp  meson.build
src/kernel/include/: errors.h  kernel.h  kernel.hpp  klibc  log.h  log.hpp
src/kernel/include/arch/x86_64/: arch.h  arch.hpp
src/kernel/include/arch/x86_64/cpu/: gdt.h  gdt.hpp  idt.h  idt.hpp  interrupts.h  interrupts.hpp
src/kernel/include/arch/x86_64/dev/: serials.h  serials.hpp
src/kernel/include/dev/: streams.h
src/kernel/include/glue/: cxxabi.h  glue.hpp
src/kernel/include/libc/: glue.hpp
src/kernel/include/libs/: bitmap.h  utils.h
src/kernel/include/memory/: memory.h  memory.hpp  phys.h  pmm.hpp
src/kernel/include/utils/: bitmap.hpp  misc.hpp
src/kernel/libc/: glue.cpp  meson.build
src/kernel/libs/: bitmap.c
src/kernel/linker/: x86-64-link.ld
src/kernel/memory/: memory.cpp  meson.build  phys.c  pmm.cpp
src/klibc/: CMakeLists.txt  ctype.c
src/klibc/include/: ctype.h  inttypes.h  stdio.h  stdlib.h  string.h
src/klibc/include/sys/: asm.h  features.h
src/klibc/inttypes/: imaxabs.c  strntoumax.c  strtoimax.c  strtoumax.c
src/klibc/stdio/: local.h  printf.c  putc.c  puts.c  sprintf.c  stdio_format_string_loop.c  stdio_out_rev.c  stdio_parse_flags.c  stdio_print_integer.c  stdio_vsnprintf.c  vprintf.c  vsnprintf.c
src/klibc/stdlib/: abs.c  atoi.c  div.c  strtol.c  strtoll.c
src/klibc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strcmp.c  strcpy.c  strlen.c
src/libc/: a.c  ctype.c  meson.build
src/libc/include/: ctype.h  stdio.h  string.h
src/libc/include/sys/: cdefs.h  errors.h  stdio_internal.h
src/libc/stdio/: fprintf.c  meson.build  putc.c  puts.c  sprintf.c
src/libc/stdio/internal/: flags.c  format_string.c  out_reverse.c  print_integer.c  vsnprintf.c
src/libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  meson.build  strcat.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strrchr.c
subprojects/: libstdc++.wrap
subprojects/packagefiles/limine/: meson.build
